--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class = "head">
-        <h1>Event Listener</h1>
+        <h1 id = "event">Event Listener</h1>
     </div>
     <div class = "buttons">
         <button id = "btn_start">start</button>
