--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,18 @@
     <title>Event Listeners</title>
     <link rel="stylesheet" href="./main.css">
 </head>
+
 <body>
-    <div class = "head">
-        <h1 id = "event">Event Listener</h1>
-    </div>
-    <div class = "buttons">
-        <button id = "btn_start">start</button>
-        <button id = "btn_stop">stop</button>
-        <button id = "btn_reset">reset</button>
+    <div class = "container">
+        <div class="head">
+            <h1 class="title">Event Listener</h1>
+        </div>
+        <div class="buttons">
+            <button id="btn_start" class = "button_Start">start</button>
+            <button id="btn_stop" class = "button_Stop">stop</button>
+            <button id="btn_reset" class = "button_Reset">reset</button>
+        </div>
     </div>
 </body>
+
 </html>
