feat: added script

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button id="btn_reset" class = "button_Reset">reset</button>
         </div>
     </div>
+    <script src = "./script.js"></script>
 </body>
 
 </html>
