feat: input box

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <button id="btn_stop" class = "button_Stop">stop</button>
             <button id="btn_reset" class = "button_Reset">reset</button>
         </div>
+        <div class = "input">
+            <input class = "input_box">
+        </div>
     </div>
     <script src = "./script.js"></script>
 </body>
